refactor: restructure code based on new class diagram